# assets/docs/swagger.yaml
@@ -3054,35 +3054,6 @@ definitions:
         description: 订阅ID
         type: integer
     type: object
-  model.StatementBillDetailRes:
-    properties:
-      city:
-        allOf:
-        - $ref: '#/definitions/model.City'
-        description: 城市
-      cost:
-        description: 费用
-        type: number
-      days:
-        description: 使用天数
-        type: integer
-      end:
-        description: 结束日期
-        type: string
-      model:
-        description: 电池型号
-        type: string
-      price:
-        description: 日单价
-        type: number
-      rider:
-        allOf:
-        - $ref: '#/definitions/model.RiderBasic'
-        description: 骑手信息
-      start:
-        description: 开始日期
-        type: string
-    type: object
   model.StatementBillHistoricalListRes:
     properties:
       cost:
@@ -3162,6 +3133,39 @@ definitions:
       uuid:
         description: 账单编码
         type: string
+    type: object
+  model.StatementDetail:
+    properties:
+      city:
+        allOf:
+        - $ref: '#/definitions/model.City'
+        description: 城市
+      cost:
+        description: 费用
+        type: number
+      days:
+        description: 使用天数
+        type: integer
+      end:
+        description: 结束日期
+        type: string
+      model:
+        description: 电池型号
+        type: string
+      price:
+        description: 日单价
+        type: number
+      rider:
+        allOf:
+        - $ref: '#/definitions/model.RiderBasic'
+        description: 骑手信息
+      start:
+        description: 开始日期
+        type: string
+      station:
+        allOf:
+        - $ref: '#/definitions/model.EnterpriseStation'
+        description: 站点, 可能为空
     type: object
   model.StatusResponse:
     properties:
@@ -6109,7 +6113,7 @@ paths:
         "200":
           description: 请求成功
           schema:
-            $ref: '#/definitions/model.StatementBillDetailRes'
+            $ref: '#/definitions/model.StatementDetail'
       summary: M9014 结账明细
       tags:
       - '[M]管理接口'
